@@ -1,3 +1,6 @@
+swish-0.3.5
+-Display Unicode filenames.
+
 swish-0.3.4
 -Fixed hostname resolution for Windows versions earlier than Vista
 
